Add custom domain to CNAME file

--- a/streamline-website/package.json
+++ b/streamline-website/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://cre-streamline.github.io/Streamline_Landing_Page"
+  "homepage": "https://kmgmt.co/streamline"
 }
