--- a/streamline-website/package.json
+++ b/streamline-website/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://landing.kmgmt.co"
+  "homepage": "https://landing.kmgmt.co/streamline"
 }
